static: Fix up news entry overflow.

--- a/newrem/static/main.scss
+++ b/newrem/static/main.scss
@@ -32,6 +32,7 @@ div.navigation {
 
     clear: left;
     position: relative;
+    overflow: auto;
 
     background-color: #001122;
 
